--- a/activity_8.ipynb
+++ b/activity_8.ipynb
@@ -55,7 +55,7 @@
     "    subs = [float(i) for i in data[data.index('[')+1:data.index(']')].split()]\n",
     "    return pd.DataFrame({'time':[time]*len(subs),'[S]':subs})\n",
     "\n",
-    "with open('../data/enzyme/3_5_21_1.prx') as prx_file:\n",
+    "with open('data/enzyme/3_5_21_1.prx') as prx_file:\n",
     "    enzyme_df = process_plate_reader_file(prx_file)\n",
     "enzyme_df"
    ]
@@ -76,7 +76,7 @@
    "source": [
     "enzyme_df = None\n",
     "\n",
-    "for p in Path('../data/enzyme').glob('*.prx'):\n",
+    "for p in Path('data/enzyme').glob('*.prx'):\n",
     "    pass\n"
    ]
   },
