--- a/activity_8.ipynb
+++ b/activity_8.ipynb
@@ -14,7 +14,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The files in the `data/enzyme` are from a study to measure an enzyme's activity. The assay takes advantage of a plate reader to monitor the absorbance of multiple reactions with different initial substrate concentrations over time. Plate readers are great because they allow for lots of data to be generated but it can be a challenge dealing with it all! Let's develop a Python workflow to handle this data. First, how can we deal with multiple files? The [`pathlib`](https://docs.python.org/3/library/pathlib.html) module of the standard library allows for easy iteration through a directory. The `.name` attribute of a path object contains the file name. Complete the following `for in` loop to print the name of each `.prx` file in the `data/enzyme` directory."
+    "The files in the `data/enzyme` directory are from a study to measure an enzyme's activity. The assay takes advantage of a plate reader to monitor the absorbance of multiple reactions with different initial substrate concentrations over time. Plate readers are great because they allow for lots of data to be collected but it can be a challenge dealing with it all! Let's develop a Python workflow to handle these data. First, how can we deal with multiple files? The [`pathlib`](https://docs.python.org/3/library/pathlib.html) module of the standard library allows for easy iteration through a directory. The `.name` attribute of a path object contains the file name. Complete the following `for in` loop to print the name of each `.prx` file in the `data/enzyme` directory."
    ]
   },
   {
@@ -34,11 +34,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To determine the kinetic parameters of the enzyme, we need [product] vs time (i.e. rates), at multiple [substrate].\n",
+    "To determine the kinetic parameters of the enzyme, we need [product] vs time (i.e. rates), at multiple initial substrate concentrations.\n",
     "\n",
-    "The plate reader is the Protoreader X, a great 96-well plate reader but not the best interface. It writes output to .prx files and these files contain notes fields with the total time the reaction has occurred (in seconds) and the initial concentration of substrate of the corresponding wells. This is followed by the data (concentration of product) in concentration units (micromolar). Note that the data field contains measurements for all 96 wells, some of which may not have anything in them (as described in the initial concentration field). \n",
+    "The instrument used to collect the data was the Protoreader X, a great 96-well plate reader. It writes output to .prx files and these files contain notes fields with the total time the reaction has occurred (in seconds) and the initial concentration of substrate of the corresponding wells. This is followed by the data (concentration of product) in concentration units (micromolar). Note that the data field contains measurements for all 96 wells, some of which may not have anything in them (as described in the initial concentration field). \n",
     "\n",
-    "Complete the function below that is intended to process a plate reader file into a DataFrame with time, [S] and [P] columns. Note that it is currently missing the product concentration column"
+    "Write a function that extracts the time point from a file's contents."
    ]
   },
   {
@@ -47,25 +47,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "\n",
-    "def process_plate_reader_file(prx_file)->pd.DataFrame:\n",
-    "    data = prx_file.read()\n",
-    "    time = float(data[data.index('Time:')+len('Time:'):data.index(',',data.index('Time:'))])\n",
-    "    subs = [float(i) for i in data[data.index('[')+1:data.index(']')].split()]\n",
-    "    return pd.DataFrame({'time':[time]*len(subs),'[S]':subs})\n",
+    "def extract_incubation_time(prx_file)->float:\n",
+    "    pass\n",
     "\n",
     "with open('data/enzyme/3_5_21_1.prx') as prx_file:\n",
-    "    enzyme_df = process_plate_reader_file(prx_file)\n",
-    "enzyme_df"
+    "    print(extract_incubation_time(prx_file.read()))\n",
+    "# should return 0.1"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Complete the `for in` loop that processes all the files using the process_plate_reader_file function and places it into the `enzyme_df` DataFrame. Use the `.open` function for the variable `p` as you would with the builtin `open` function (i.e. in a context manager). Note that Pandas has an [`.concat`](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.concat.html) function that can be used to combine DataFrames. Set the `ignore_index` keyword argument to `True` to reindex the row labels of the resulting combined DataFrame."
+    "Now write a function that extracts all of the starting substrate concentrations from a file's contents."
    ]
   },
   {
@@ -74,11 +68,105 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "enzyme_df = None\n",
+    "def extract_substrate_concentrations(prx_file)->list[float]:\n",
+    "    pass\n",
     "\n",
-    "for p in Path('data/enzyme').glob('*.prx'):\n",
-    "    pass\n"
+    "with open('data/enzyme/3_5_21_1.prx') as prx_file:\n",
+    "    print(sum(extract_substrate_concentrations(prx_file.read())))\n",
+    "# should return 0.1"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now write a function that extracts all of the absorbance readings from a file's contents."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def extract_absorbance_measurements(prx_file)->list[float]:\n",
+    "    pass\n",
+    "\n",
+    "with open('data/enzyme/3_5_21_1.prx') as prx_file:\n",
+    "    print(sum(extract_absorbance_measurements(prx_file.read())))\n",
+    "# should return 0.1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we have the tools to load all of the data - the question is how we should format it. We would like to access absorbance vs time data at different substrate concentrations. For this we need a list or numpy array of all of the time points and a corresponding list of absorbance measurements at each substrate concentration. We can accomplish this by:\n",
+    "\n",
+    "- building an array of the time points\n",
+    "- building an array of the substrate concentrations\n",
+    "- building a two dimensional array of the absorbance measurements\n",
+    "\n",
+    "Build an array of the time points represented in the dataset in the cell below"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for p in Path('data/enzyme').glob('*.prx'):\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Build an array of the substrate concentrations represented in the dataset in the cell below"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for p in Path('data/enzyme').glob('*.prx'):\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Build a two dimensional array of the absorbance measurements in the cell below"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for p in Path('data/enzyme').glob('*.prx'):\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Try to work with the data by plotting two different datasets (absorbance vs time)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "attachments": {},
