moving things around

--- a/activity_8.ipynb
+++ b/activity_8.ipynb
@@ -6,39 +6,14 @@
    "metadata": {},
    "source": [
     "# Activity 8 - curve fitting and processing multiple files\n",
-    "It is often the case that datasets are composed of more than one file. How can we process more than one file using Python? "
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The files in the `data/enzyme` directory are from a study to measure an enzyme's activity. The assay takes advantage of a plate reader to monitor the absorbance of multiple reactions with different initial substrate concentrations over time. Plate readers are great because they allow for lots of data to be collected but it can be a challenge dealing with it all! Let's develop a Python workflow to handle these data. First, how can we deal with multiple files? The [`pathlib`](https://docs.python.org/3/library/pathlib.html) module of the standard library allows for easy iteration through a directory. The `.name` attribute of a path object contains the file name. Complete the following `for in` loop to print the name of each `.prx` file in the `data/enzyme` directory."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pathlib import Path\n",
     "\n",
-    "for p in Path('data/enzyme').glob('*.prx'):\n",
-    "    pass"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "To determine the kinetic parameters of the enzyme, we need [product] vs time (i.e. rates), at multiple initial substrate concentrations.\n",
+    "## Analyzing enzyme kinetics using data from a plate reader\n",
     "\n",
-    "The instrument used to collect the data was the Protoreader X, a great 96-well plate reader. It writes output to .prx files and these files contain notes fields with the total time the reaction has occurred (in seconds) and the initial concentration of substrate of the corresponding wells. This is followed by the data (concentration of product) in concentration units (micromolar). Note that the data field contains measurements for all 96 wells, some of which may not have anything in them (as described in the initial concentration field). \n",
+    "We are analyzing the kinetic properties of a newly discovered enzyme. For this analysis, we need [product] vs time (i.e. rates), at multiple initial substrate concentrations.\n",
     "\n",
-    "Write a function that extracts the time point from a file's contents."
+    "The instrument used to collect the data was the Protoreader X, a great 96-well plate reader that writes files in a format that isn't the easiest to work with. Its output files have a `.prx` extension and these files contain notes fields with the total time the reaction has occurred (in seconds) and the initial concentration of substrate of the corresponding wells. This is followed by the data (concentration of product) in concentration units (micromolar). Note that the data field contains measurements for all 96 wells, some of which may not have anything in them (as described in the initial concentration field). \n",
+    "\n",
+    "Write a function that extracts the time point at which the data were acquired from a file's contents."
    ]
   },
   {
@@ -111,6 +86,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It is often the case that datasets are composed of more than one file. How can we process more than one file using Python? \n",
+    "\n",
+    "The files in the `data/enzyme` directory are from a study to measure an enzyme's activity. The assay takes advantage of a plate reader to monitor the absorbance of multiple reactions with different initial substrate concentrations over time. Plate readers are great because they allow for lots of data to be collected but it can be a challenge dealing with it all! Let's develop a Python workflow to handle these data. First, how can we deal with multiple files? The [`pathlib`](https://docs.python.org/3/library/pathlib.html) module of the standard library allows for easy iteration through a directory. The `.name` attribute of a path object contains the file name. Complete the following `for in` loop to print the name of each `.prx` file in the `data/enzyme` directory."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
+    "\n",
+    "for p in Path('data/enzyme').glob('*.prx'):\n",
+    "    pass"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -158,7 +154,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Try to work with the data by plotting two different datasets (absorbance vs time)"
+    "Try to work with the data by plotting two different datasets (absorbance vs time) contained within the arrays you constructed."
    ]
   },
   {
