--- a/activity_8.ipynb
+++ b/activity_8.ipynb
@@ -146,13 +146,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
     "absorbances = []\n",
     "for p in Path('data/enzyme').glob('*.prx'):\n",
     "    with open(f'data/enzyme/{p.name}') as prx_file:\n",
-    "        pass\n"
+    "        pass"
    ]
   },
   {
@@ -167,7 +164,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import matplotlib.pyplot as plt"
+   ]
   },
   {
    "attachments": {},
