--- a/activity_8.ipynb
+++ b/activity_8.ipynb
@@ -22,6 +22,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
     "def extract_incubation_time(prx_file:str)->float:\n",
     "    pass\n",
     "\n",
@@ -34,7 +37,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now write a function that extracts all of the starting substrate concentrations from a file's contents."
+    "Next, write a function that extracts all of the starting substrate concentrations from a file's contents."
    ]
   },
   {
@@ -55,7 +58,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now write a function that extracts all of the absorbance readings from a file's contents."
+    "Next, write a function that extracts all of the absorbance readings from a file's contents."
    ]
   },
   {
@@ -69,20 +72,20 @@
     "\n",
     "with open('data/enzyme/3_5_21_1.prx') as prx_file:\n",
     "    print(sum(extract_absorbance_measurements(prx_file.read())))\n",
-    "# should return -0.15999999999999903"
+    "# should return -0.14999999999999925"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we have the tools to load all of the data - the question is how we should format it. We would like to access absorbance vs time data at different substrate concentrations. For this we need a list or numpy array of all of the time points and a corresponding list of absorbance measurements at each substrate concentration. We can accomplish this by:\n",
+    "Now we have the tools to load all the data - but how should we structure it? We would like to access absorbance vs time data at different substrate concentrations. For this we need a list or numpy array of all of the time points and a corresponding list of absorbance measurements at each substrate concentration. We can accomplish this by:\n",
     "\n",
     "- building an array of the substrate concentrations\n",
     "- building an array of the time points\n",
     "- building a two dimensional array of the absorbance measurements\n",
     "\n",
-    "To build an array of the substrate concentrations, we can read them out of any one of the files. Use your `extract_substrate_concentrations` function to build an array of the substrate concentrations used."
+    "To build an array of the substrate concentrations, we can read them out of any one of the files. Use your `extract_substrate_concentrations` function to build an array of the substrate concentrations used. Assign the resulting array to `substrate_concentrations`"
    ]
   },
   {
@@ -92,7 +95,7 @@
    "outputs": [],
    "source": [
     "with open('data/enzyme/3_5_21_1.prx') as prx_file:\n",
-    "    pass"
+    "   pass"
    ]
   },
   {
@@ -111,7 +114,7 @@
     "from pathlib import Path\n",
     "\n",
     "for p in Path('data/enzyme').glob('*.prx'):\n",
-    "    pass"
+    "    print(p)"
    ]
   },
   {
@@ -129,7 +132,7 @@
    "source": [
     "incubation_times = []\n",
     "for p in Path('data/enzyme').glob('*.prx'):\n",
-    "    with open(f'data/enzyme/{p.name}') as prx_file:\n",
+    "    with open(p) as prx_file:\n",
     "        pass"
    ]
   },
@@ -137,7 +140,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Build a two dimensional array of the absorbance measurements in the cell below"
+    "Build a two dimensional numpy array of the absorbance measurements in the cell below"
    ]
   },
   {
@@ -148,7 +151,7 @@
    "source": [
     "absorbances = []\n",
     "for p in Path('data/enzyme').glob('*.prx'):\n",
-    "    with open(f'data/enzyme/{p.name}') as prx_file:\n",
+    "    with open(p) as prx_file:\n",
     "        pass"
    ]
   },
@@ -156,7 +159,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Try to work with the data by plotting two different datasets (absorbance vs time) contained within the arrays you constructed."
+    "Use the multidimensional array to plot the dataset (absorbance vs time) contained within the arrays you constructed that has the highest substrate concentration."
    ]
   },
   {
@@ -164,16 +167,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import matplotlib.pyplot as plt"
-   ]
+   "source": []
   },
   {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The next step is to fit the product concentration to the time at each substrate concentration. This is where the `scipy.optimize.curve_fit` function is useful. This function takes a function as its first argument. The function takes the independent variable as its first argument (as a numpy array) and returns the dependent variable, with other parameters as the additional arguments. Complete the following code by assigning the `time_data` and `product_data` variables to the relevant data for a single substrate concentration from your absorbance matrix."
+    "To get the rates at each substrate concentration, we need to fit the product concentration to the time for each substrate concentration. This is where the `scipy.optimize.curve_fit` function is useful. This function takes a function as its first argument. The passed in function takes the independent variable as its first argument (as a numpy array) and returns the dependent variable, with other parameters as the additional arguments. Complete the following code by assigning the `time_data` and `product_data` variables to the relevant data for a single substrate concentration from your absorbance matrix."
    ]
   },
   {
@@ -187,8 +188,8 @@
     "def rate_equation(time:float,rate:float,offset:float)->float:\n",
     "    return rate * time + offset\n",
     "\n",
-    "time_data = None\n",
-    "product_data = None\n",
+    "time_data = None # Replace None with the appropriate array\n",
+    "product_data = None # Replace None with the appropriate array\n",
     "\n",
     "results,_ = curve_fit(rate_equation,time_data,product_data)\n",
     "results"
@@ -211,11 +212,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "c105c4553fb453fc2f221e0c5e897461189582aefb3b7b8bfd5e1d5829dbe375"
-  },
   "kernelspec": {
-   "display_name": "Python 3.10.4 ('py310')",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
