--- a/activity_8.ipynb
+++ b/activity_8.ipynb
@@ -114,7 +114,7 @@
     "from pathlib import Path\n",
     "\n",
     "for p in Path('data/enzyme').glob('*.prx'):\n",
-    "    print(p)"
+    "    pass"
    ]
   },
   {
@@ -128,11 +128,38 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "17.905263157894737\n",
+      "3.2421052631578946\n",
+      "4.289473684210526\n",
+      "18.95263157894737\n",
+      "6.384210526315789\n",
+      "5.336842105263157\n",
+      "1.1473684210526316\n",
+      "2.194736842105263\n",
+      "0.1\n",
+      "20.0\n",
+      "10.573684210526315\n",
+      "9.526315789473683\n",
+      "11.621052631578946\n",
+      "12.668421052631578\n",
+      "16.857894736842105\n",
+      "15.810526315789472\n",
+      "13.71578947368421\n",
+      "7.43157894736842\n",
+      "8.478947368421052\n",
+      "14.76315789473684\n"
+     ]
+    }
+   ],
    "source": [
     "incubation_times = []\n",
     "for p in Path('data/enzyme').glob('*.prx'):\n",
-    "    with open(p) as prx_file:\n",
+    "    with p.open() as prx_file:\n",
     "        pass"
    ]
   },
@@ -151,7 +178,7 @@
    "source": [
     "absorbances = []\n",
     "for p in Path('data/enzyme').glob('*.prx'):\n",
-    "    with open(p) as prx_file:\n",
+    "    with p.open() as prx_file:\n",
     "        pass"
    ]
   },
